enable the blog section

--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 # Site Author
 author:
   name             : "Qianren Li"
-  avatar           : "images/android-chrome-512x512.png"
+  avatar           : "images/L-500x500.png"
   bio              : "Southern University of Science and Technology (SUSTech)"
   location         : "Shengzheng, China"
   employer         :
