--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 # Site Settings
 title                    : "Qianren Li"
 description              : "Working on the optimization in wireless communication."
-repository               : "RayeRen/acad-homepage.github.io"
+repository               : "QianrenLi/qianrenli.github.io"
 google_scholar_stats_use_cdn : false
 
 # google analytics
