--- a/_config.yml
+++ b/_config.yml
@@ -161,3 +161,11 @@ compress_html:
   clippings: all
   ignore:
     envs: development
+
+# utterances
+utterances:
+  repo: QianrenLi/qianrenli.github.io
+  issue-term: pathname
+  label: "comment"
+  theme: "github-light"
+  crossorigin: "anonymous"
