--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,8 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 
 # Site Author
 author:
-  name             : "Qianren Li"
+  name             : "Qianren Li" 
+  name_ch          : "李乾任"
   avatar           : "L-500x500.png"
   bio              : "Southern University of Science and Technology (SUSTech)"
   location         : "Shengzheng, China"
